# LokiRenderer

./: CMakeLists.txt  README.md
assets/Miku/: Miku.mtl
assets/african_head/: african_head.mtl  tagent_test.mtl
assets/diablo3_pose/: diablo3_pose.mtl
assets/floor/: floor.mtl
assets/helmet/: helmet.mtl  helmet_new.mtl
assets/helmet_pbr/: helmet.mtl
include/: RenderState.h  buffer.h  camera.h  color.h  light.h  material.h  mathUtils.h  matrixUtils.h  mesh.h  model.h  rasterizer.h  renderer.h  shader.h  texture.h  vertex.h  window.h
src/: camera.cpp  color.cpp  light.cpp  material.cpp  mathUtils.cpp  matrixUtils.cpp  mesh.cpp  model.cpp  rasterizer.cpp  renderer.cpp  texture.cpp  window.cpp
test/test_triangle/: CMakeLists.txt  main.cpp
